--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,10 @@
 ---
-
+import Hero from "../components/Hero.astro";
+import Genre from "../components/Genre.astro";
+import Lab from "../components/Lab.astro";
+import DansePortraetter from "../components/DansePortraetter.astro";
+import Velkommen from "../components/Velkommen.astro";
+import Workshop from "../components/Workshop.astro";
 ---
 
 <html lang="en">
@@ -12,5 +17,13 @@
 	</head>
 	<body>
 		<h1>Astro</h1>
+		<Hero/>
+		<Velkommen/>
+		<Genre/>
+		<Workshop/>
+		<Lab/>
+		<DansePortraetter/>
+		
+
 	</body>
 </html>
