--- a/src/components/DansePortraetter.astro
+++ b/src/components/DansePortraetter.astro
@@ -3,12 +3,13 @@
 
 <div>
 
-    <img src="" alt="">
-    <img src="" alt="">
-    <img src="" alt="">
-    <img src="" alt="">
-    <img src="" alt="">
-    <img src="" alt="">
+    <img src="./images/portræt.1.png" alt="potraet1">
+    <img src="" alt="potraet2">
+    <img src="" alt="potraet3">
+    <img src="" alt="potraet4">
+    <img src="" alt="potraet5">
+    <img src="" alt="potraet6">
+
 </div>
 
 </div>
