--- a/src/components/DansePortraetter.astro
+++ b/src/components/DansePortraetter.astro
@@ -1,9 +1,9 @@
-<div class="backgorund">
+<div class="background">
 <h1>Danseportrætter</h1>
 
 <div>
 
-    <img src="./images/portræt.1.png" alt="potraet1">
+    <img src="src/assets/images/portrat.1.png" alt="potraet1">
     <img src="" alt="potraet2">
     <img src="" alt="potraet3">
     <img src="" alt="potraet4">
@@ -18,7 +18,7 @@
 <style>
 
 .background {
-    background-color: ;
+    background-color: #196472;
 }
 
 
