--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,6 +23,7 @@ import Workshop from "../components/Workshop.astro";
 		<Workshop/>
 		<Lab/>
 		<DansePortraetter/>
+		<img src="../assets/portrat.1.png" alt="">
 		
 
 	</body>
