--- a/src/components/DansePortraetter.astro
+++ b/src/components/DansePortraetter.astro
@@ -1,9 +1,13 @@
+---
+import { Image } from "astro:assets";
+---
+
 <div class="background">
 <h1>Danseportrætter</h1>
 
 <div>
 
-    <img src="src/assets/images/portrat.1.png" alt="potraet1">
+    <img src="../assets/images/portrat.1.png" alt="potraet1">
     <img src="" alt="potraet2">
     <img src="" alt="potraet3">
     <img src="" alt="potraet4">
