--- a/src/components/DansePortraetter.astro
+++ b/src/components/DansePortraetter.astro
@@ -7,12 +7,12 @@ import { Image } from "astro:assets";
 
 <div>
 
-    <img src="../assets/images/portrat.1.png" alt="potraet1">
-    <img src="" alt="potraet2">
-    <img src="" alt="potraet3">
-    <img src="" alt="potraet4">
-    <img src="" alt="potraet5">
-    <img src="" alt="potraet6">
+    <img src="/src/assets/portrat.1.png" alt="potraet1">
+    <img src="/src/assets/portrat.2.png" alt="potraet2">
+    <img src="/src/assets/portrat.3.png" alt="potraet3">
+    <img src="/src/assets/portrat.4.png" alt="potraet4">
+    <img src="/src/assets/portrat.5.png" alt="potraet5">
+    <img src="/src/assets/portrat.6.png" alt="potraet6">
 
 </div>
 
