Siden danseportrætter påbegyndt

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,5 +1,5 @@
 <div class="container">
-<video controls autoplay muted loop>
+<video class="video" controls autoplay muted loop>
     <source src="/public/video/Video til header.mov">
 </video>
 <div>
@@ -14,15 +14,19 @@
     height: 100%; */
   }
 
+.video{
+    width: 100%;
+    height: auto;
+}
   .overskrift {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-55%, -120%);
+    transform: translate(-46%, -130%);
     /* font-family:"inter"; */
     text-transform: uppercase;
     font-weight: 800;
     color: #FFF3F2;
-    font-size: 120px;
+    font-size: 130px;
   }
 </style>
