--- a/src/components/DansePortraetter.astro
+++ b/src/components/DansePortraetter.astro
@@ -19,21 +19,32 @@ import { Image } from "astro:assets";
 
 <style>
 
+    h1{
+        font-size: 80px;
+        text-align: center;
+        padding-top: 3rem;
+        color: #FFF3F2;
+    }
+
 .background {
-    background-color: #196472;
+    background-color: #0C3C52;
 }
 
 .grid{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-row: auto;
-    gap: 1rem;
-    margin-top: 90px;
+    gap: 2rem;
+    margin-top: 50px;
+    padding-bottom: 50px;
+    padding-left: 50px;
+    padding-right: 50px;
 }
 
-.img1{
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
+.grid img{
+width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
+
 </style>
