--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -29,4 +29,11 @@
     color: #FFF3F2;
     font-size: 130px;
   }
+
+  @media (max-width: 820px) {
+    .overskrift{
+      font-size: 80px;
+      transform: translate(-50%, -130%);
+}
+  }
 </style>
