--- a/src/components/DansePortraetter.astro
+++ b/src/components/DansePortraetter.astro
@@ -47,4 +47,11 @@ width: 100%;
   object-fit: cover;
 }
 
+@media (max-width: 820px) {
+    .grid{
+    display: grid;
+    grid-template-columns: 1fr;
+}
+  }
+
 </style>
