--- a/src/components/Genre.astro
+++ b/src/components/Genre.astro
@@ -5,7 +5,7 @@
 <section class="grid3">
     <div class="første">
     <li> Experimental Contemporary</li> 
-        <li>   Afro House</li> 
+        <li>   Afro </li> 
             <li> Street Jazz</li> 
                 <li> Commercial Femme</li> 
                 <li> Breakdance </li>
@@ -13,9 +13,9 @@
 
     <div class="anden">
         <li> Experimental Contemporary</li> 
-        <li>   Afro </li> 
-        
-            <li> Street Jazz</li> 
+        <li>   Hip Hop </li> 
+        <li>   Moderne Dans </li> 
+            <li> Smidighedstræning</li> 
                 <li> Commercial Femme</li> 
     </div>
 
@@ -34,10 +34,10 @@
     display: grid; 
     grid-template-columns: 1fr 1fr 1fr;
     text-align: center;
+    gap: 1em;
     padding: 5%;
-    gap: 2px;
     list-style-type: none;
-    background-color:#FFF3F2;
+    background-color:#FFF3F2; 
 }
 </style> 
 
