--- a/src/components/DansePortraetter.astro
+++ b/src/components/DansePortraetter.astro
@@ -3,7 +3,7 @@ import { Image } from "astro:assets";
 ---
 
 <div class="background">
-<h1>Danseportrætter</h1>
+<h2>Danseportrætter</h2>
 
 <section class="grid">
     <img class="img1" src="/src/assets/portrat.1.png" alt="potraet1">
@@ -19,11 +19,14 @@ import { Image } from "astro:assets";
 
 <style>
 
-    h1{
-        font-size: 80px;
+    h2{
+        font-size: 64px;
         text-align: center;
-        padding-top: 3rem;
+        padding-top: 10px;
+        padding-bottom: 10px;
         color: #FFF3F2;
+        font-family:"dansestudietdisplay1";
+        font-weight: lighter;
     }
 
 .background {
@@ -34,11 +37,11 @@ import { Image } from "astro:assets";
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-row: auto;
-    gap: 2rem;
-    margin-top: 50px;
-    padding-bottom: 50px;
-    padding-left: 50px;
-    padding-right: 50px;
+    gap: 20px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 .grid img{
