--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -9,8 +9,8 @@
 }
 
 @font-face {
-  font-family: ;
-  src: url();
+  font-family: dansestudietdisplay1;
+  src: url("dansestudietdisplay1-webfont.woff2") format("woff2");
 }
 
 img {
