--- a/src/components/Workshop.astro
+++ b/src/components/Workshop.astro
@@ -1,8 +1,11 @@
 <div class="workshop">
  <img src="/src/assets/Forstilling.1.png" alt="billede1">
+ <div class="gap">
  <h2>Månedens Workshop</h2>
  <h3>December Søndag d. 10. december kl. 14-16</h3>
  <p>Anna Zacho medstifter af “The Edge Dance Space” kommer hjem fra London for at give en Commercial Performance workshop med lækker energi. Lad os danse sammen til den sidste MW i år.</p>
+</div>
+<button>Se forestillinger her</button>
 </div>
 
 <style>
@@ -13,4 +16,9 @@
     .workshop {
         padding: 20px;
     }
+
+    button {
+        background-color: #196472;
+    }
+
 </style>
