--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,14 +19,26 @@ import Workshop from "../components/Workshop.astro";
 		<title>Astro</title>
 	</head>
 	<body>
-		<Hero/>
-		<Velkommen/>
-		<Genre/>
+		<section>
+			<Hero/>
+		</section>
+
+		<section>
+			<Velkommen/>
+		</section>
+
+		<section>
+			<Genre/>
+		</section>
+
+		<div class="background">
+		<h2 class="forestillinger">Forestillinger</h2>
 
 		<div class="grid1">
-		<Workshop/>
-		<Lab/>
-	</div>
+			<Workshop/>
+			<Lab/>
+		</div>
+		</div>
 
 		<DansePortraetter/>
 		<img src="../assets/portrat.1.png" alt="">
@@ -37,18 +49,34 @@ import Workshop from "../components/Workshop.astro";
 
 <style>
 
-@media (max-width: 600px) {
+
+.grid1 {
+		display: grid;
+		overflow: hidden;
+		grid-template-columns: 1fr 1fr;
+		padding: 10px;
+		gap: 30px;
+		margin-inline: 70px;
+		background-color: #196472;
+	}
+
+	.background {
+		background-color: #196472;
+	}
+
+	.forestillinger {
+		text-align: center;
+		font-size: 64px;
+	}
+@media (max-width: 820px) {
 	.grid1 {
 		display: grid;
 		overflow: hidden;
 		grid-template-columns: 1fr;
+		
 	}
 }
-	.grid1 {
-		display: grid;
-		overflow: hidden;
-		grid-template-columns: 1fr 1fr;
-	}
+
 </style>
 
 
