--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,9 +26,11 @@ import Workshop from "../components/Workshop.astro";
 	
 			<Genre/>
 
-
+			
+				
+		
 		<div class="background">
-		<h2 class="forestillinger">Forestillinger</h2>
+			<h2 class="forestillinger">Forestillinger</h2>
 
 		<div class="grid1">
 			<Workshop/>
@@ -63,6 +65,8 @@ import Workshop from "../components/Workshop.astro";
 	.forestillinger {
 		text-align: center;
 		font-size: 64px;
+		background-color: #196472;
+		margin: 0;
 	}
 @media (max-width: 820px) {
 	.grid1 {
