--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,6 +1,6 @@
 <div class="container">
 <video class="video" controls autoplay muted loop>
-    <source src="/public/video/Video til header.mov">
+    <source src="/public/video/Film til header .mov">
 </video>
 <div>
     <h1 class="overskrift">Dansestudiet</h1>
@@ -10,8 +10,6 @@
 <style>
 .container {
     position: relative;
-    /* width: 100%;
-    height: 100%; */
   }
 
 .video{
@@ -23,11 +21,13 @@
     top: 50%;
     left: 50%;
     transform: translate(-46%, -130%);
-    /* font-family:"inter"; */
     text-transform: uppercase;
     font-weight: 800;
     color: #FFF3F2;
-    font-size: 130px;
+    font-size: 150px;
+    font-family:"dansestudietdisplay1";
+    font-weight: lighter;
+    /* margin: 0; */
   }
 
   @media (max-width: 820px) {
