--- a/src/components/Genre.astro
+++ b/src/components/Genre.astro
@@ -37,14 +37,12 @@
     display: grid; 
     grid-template-columns: 1fr 1fr 1fr;
     text-align: left;
-    padding: 10%;
+    padding: 40px;
+    gap: 40px;
     list-style-type: none;
     background-color:#FFF3F2; 
 }
 
-.første, .anden, .tredje{
-    gap: 40px;
-}
 
 
 </style> 
