--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import Lab from "../components/Lab.astro";
 import DansePortraetter from "../components/DansePortraetter.astro";
 import Velkommen from "../components/Velkommen.astro";
 import Workshop from "../components/Workshop.astro";
+import Button from "../components/Button.astro";
 
 
 ---
@@ -22,6 +23,7 @@ import Workshop from "../components/Workshop.astro";
 		<Hero/>
 		<Velkommen/>
 		<Genre/>
+		<Button/>
 
 		<div class="grid1">
 		<Workshop/>
