--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -1,27 +1,29 @@
 ---
 ---
-<section class="knap">
+<!-- <section class="knap"> -->
+    <div class="knap">
 <a href="#" class="button">Link Button</a>
-</section>
+    </div>
+<!-- </section> -->
 
 
 
 <style>
 
 .knap{
-    background-color:#FFF3F2;
-    
-}    
+background-color:#FFF3F2;
+justify-content:center;
+text-align:center;
+} 
+
 .button{
-    justify-content: center;
-  background-color:#DBADB1;
-  text-align: center;
-  border-radius: 4px;
-  color: white;
-  padding: 10px;
-  text-decoration: none;
-  font-size: 30px;
-  gap: 40;
+background-color:#DBADB1;
+border-radius: 4px;
+color: #196472;
+text-decoration: none;
+padding: 10px;
+
 }
+
 </style>
 
