--- a/src/components/Genre.astro
+++ b/src/components/Genre.astro
@@ -36,11 +36,18 @@
 .grid3{
     display: grid; 
     grid-template-columns: 1fr 1fr 1fr;
+    justify-content:center;
     text-align: left;
-    padding: 40px;
-    gap: 40px;
     list-style-type: none;
     background-color:#FFF3F2; 
+    font-family: "dansestudietdisplay1";
+    padding: 40px;
+    
+}
+
+.første{
+    gap: 40px;
+    
 }
 
 
