--- a/src/components/Velkommen.astro
+++ b/src/components/Velkommen.astro
@@ -10,20 +10,23 @@
 
 <style>
 
-.overskrift{
+.grid1{
     text-align: center;
+    justify-content:center;
     display: grid;
     background-color:#FFF3F2;
-    
+    font-family: "dansestudietdisplay1";
 }
 
-.grid1{
-    gap: 40;
+h1{
+    font-weight: lighter;
+    font-size: 62px;
 }
 
 h2{
-    font-family: "dansestudietdisplay1";
+   
     font-weight: lighter;
+    font-size: 32px;
 }
 
 
