--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,5 +1,5 @@
 <div class="container">
-<video class="video" controls autoplay muted loop>
+<video class="video" autoplay muted loop>
     <source src="/public/video/Film til header .mov">
 </video>
 <div>
@@ -20,19 +20,17 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-46%, -130%);
+    transform: translate(-50%, -130%);
     text-transform: uppercase;
     font-weight: 800;
     color: #FFF3F2;
     font-size: 150px;
     font-family:"dansestudietdisplay1";
-    font-weight: lighter;
-    /* margin: 0; */
   }
 
   @media (max-width: 820px) {
     .overskrift{
-      font-size: 80px;
+      font-size: 50px;
       transform: translate(-50%, -130%);
 }
   }
