--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -68,6 +68,10 @@ import Workshop from "../components/Workshop.astro";
 		background-color: #196472;
 		margin: 0;
 	}
+
+	body{
+		margin: 0;
+	}
 @media (max-width: 820px) {
 	.grid1 {
 		display: grid;
