--- a/src/components/Workshop.astro
+++ b/src/components/Workshop.astro
@@ -9,6 +9,26 @@
 </div>
 
 <style>
+
+    h2 {
+        font-family: "dansestudietdisplay1" ;
+        color: #FFFCFB;
+        font-weight: lighter;
+        }
+
+        h3 {
+            font-family: "avenir next" ;
+        color: #FFFCFB; 
+        font-weight: lighter;
+        font-size: 18px;
+        }
+
+        p {
+            font-family: "avenir next" ;
+        color: #FFFCFB; 
+        font-weight: lighter;
+        font-size: 15px; 
+        }
     img {
         width: 100%;
     }
@@ -19,6 +39,12 @@
 
     button {
         background-color: #196472;
+        border-radius: 4px ;
+        border-color: #FFDF4C;
+        width: 100%;
+        color: #FFFCFB;
+        
+
     }
 
 </style>
