--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -54,7 +54,7 @@ import Workshop from "../components/Workshop.astro";
 		grid-template-columns: 1fr 1fr;
 		padding: 10px;
 		gap: 30px;
-		margin-inline: 70px;
+		margin-inline: 200px;
 		background-color: #196472;
 	}
 
@@ -67,6 +67,9 @@ import Workshop from "../components/Workshop.astro";
 		font-size: 64px;
 		background-color: #196472;
 		margin: 0;
+		font-family: "dansestudietdisplay1" ;
+        color: #FFFCFB;
+        font-weight: lighter;
 	}
 @media (max-width: 820px) {
 	.grid1 {
