--- a/src/components/Workshop.astro
+++ b/src/components/Workshop.astro
@@ -29,6 +29,7 @@
         font-weight: lighter;
         font-size: 15px; 
         }
+
     img {
         width: 100%;
     }
@@ -43,8 +44,16 @@
         border-color: #FFDF4C;
         width: 100%;
         color: #FFFCFB;
-        
+        padding-top: 10px;
+        padding-bottom: 10px;
+        font-family: "dansestudietdisplay1" ;
+        font-weight: lighter;
+        font-size: 20px;
 
     }
 
+    button:hover {
+        background-color: #FFDF4C;
+        color: #196472;
+    }
 </style>
