--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -14,7 +14,7 @@
 }
 
 @font-face {
-  font-family: inter;
+  font-family: inter-variablefont;
   src: url("inter-variablefont_slntwght-webfont.woff2") format("woff2");
 }
 
