--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -53,7 +53,7 @@ import Button from "../components/Button.astro";
 		grid-template-columns: 1fr 1fr;
 		padding: 10px;
 		gap: 30px;
-		margin-inline: 200px;
+		margin-inline: 320px;
 		background-color: #196472;
 	}
 
@@ -69,6 +69,7 @@ import Button from "../components/Button.astro";
 		font-family: "dansestudietdisplay1" ;
         color: #FFFCFB;
         font-weight: lighter;
+		padding-top: 40px;
 	}
 
 	body{
