--- a/src/components/DansePortraetter.astro
+++ b/src/components/DansePortraetter.astro
@@ -55,7 +55,12 @@ width: 100%;
     .grid{
     display: grid;
     grid-template-columns: 1fr;
+    margin-inline: 30px;
 }
+  }
+
+  h2{
+    font-size: 50px;
   }
 
 </style>
