--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -75,14 +75,28 @@ import Button from "../components/Button.astro";
 	body{
 		margin: 0;
 	}
-@media (max-width: 820px) {
+@media (max-width: 600px) {
 	.grid1 {
 		display: grid;
-		overflow: hidden;
 		grid-template-columns: 1fr;
-		
+		padding: 10px;
+		gap: 30px;
+		margin-inline: 20px;
+		background-color: #196472;
+	}
+
+	.forestillinger {
+		text-align: center;
+		font-size: 44px;
+		background-color: #196472;
+		margin: 0;
+		font-family: "dansestudietdisplay1" ;
+        color: #FFFCFB;
+        font-weight: lighter;
+		padding-top: 40px;
 	}
 }
+
 
 </style>
 
