--- a/src/components/Lab.astro
+++ b/src/components/Lab.astro
@@ -3,7 +3,7 @@
     <h2>Movement LAB</h2>
     <h3>Løndag & Søndag d. 3. & 4. februar 2024. Begge dage Kl.13-16</h3>
     <p>Vittoria Lasorella er tilbage og vi glæder os til dette længe ventede Movement LAB med hende. Åben for tilmelding!</p>
-    <button>Se forestillinger her</button>
+   <div class="knap"> <button>Se forestillinger her</button></div>
    </div>
 
    <style>
@@ -51,5 +51,9 @@ h2 {
     button:hover {
         background-color: #FFDF4C;
         color: #196472;
+    }
+
+    .knap {
+        padding-top: 40px;
     }
 </style>
