--- a/src/components/Workshop.astro
+++ b/src/components/Workshop.astro
@@ -5,7 +5,9 @@
  <h3>December Søndag d. 10. december kl. 14-16</h3>
  <p>Anna Zacho medstifter af “The Edge Dance Space” kommer hjem fra London for at give en Commercial Performance workshop med lækker energi. Lad os danse sammen til den sidste MW i år.</p>
 </div>
+<div class="knap">
 <button>Se forestillinger her</button>
+</div>
 </div>
 
 <style>
@@ -36,6 +38,10 @@
 
     .workshop {
         padding: 20px;
+    }
+
+    .knap {
+        padding-top: 40px;
     }
 
     button {
