--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -1,29 +1,27 @@
 ---
+
 ---
+
 <!-- <section class="knap"> -->
-    <div class="knap">
-<a href="#" class="button">Link Button</a>
-    </div>
+<div class="knap">
+  <a href="#" class="button">Se Skema Her</a>
+</div>
 <!-- </section> -->
 
-
-
 <style>
+  .knap {
+    background-color: #fff3f2;
+    justify-content: center;
+    text-align: center;
+  }
 
-.knap{
-background-color:#FFF3F2;
-justify-content:center;
-text-align:center;
-} 
-
-.button{
-background-color:#DBADB1;
-border-radius: 4px;
-color: #196472;
-text-decoration: none;
-padding: 10px;
-
-}
-
+  .button {
+    background-color: #dbadb1;
+    border-radius: 4px;
+    color: #196472;
+    text-decoration: none;
+    padding: 10px;
+    font-family: "dansestudietdisplay1";
+    font-weight: bold;
+  }
 </style>
-
