--- a/src/components/Genre.astro
+++ b/src/components/Genre.astro
@@ -3,57 +3,48 @@
 ---
 
 <section class="grid3">
-    <div class="første">
-    <li> Experimental Contemporary</li> 
-        <li>   Afro </li> 
-            <li> Street Jazz</li> 
-                <li> Commercial Femme</li> 
-                <li> Breakdance </li>
-    </div>
+  <ul class="genre-list">
+    <li>Experimental Contemporary</li>
+    <li>Afro</li>
+    <li>Street Jazz</li>
+    <li>Commercial Femme</li>
+    <li>ballet</li>
+  </ul>
 
-    <div class="anden">
-        <li> Experimental Contemporary</li> 
-        <li>   Hip Hop </li> 
-        <li>   Moderne Dans </li> 
-            <li> Smidighedstræning</li> 
-                <li> Commercial Femme</li> 
-    </div>
+  <ul class="genre-list">
+    <li>Hip Hop</li>
+    <li>Moderne Dans</li>
+    <li>Smidighedstræning</li>
+    <li>House</li>
+    <li>Breakdance</li>
+  </ul>
 
-    <div class="tredje">
-        <li> Fusion Contemporary</li> 
-        <li>  Yoga </li> 
-            <li>Waacking</li> 
-            <li> House </li>
-                <li> Workshops m.m.</li> 
-    </div>
+  <ul class="genre-list">
+    <li>Fusion Contemporary</li>
+    <li>Yoga</li>
+    <li>Waacking</li>
+    <li>Workshops m.m.</li>
+  </ul>
 </section>
 
-
-
-
-<style> 
-
-.grid3{
-    display: grid; 
+<style>
+  .grid3 {
+    display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    justify-content:center;
+    justify-content: center;
     text-align: left;
     list-style-type: none;
-    background-color:#FFF3F2; 
+    background-color: #fff3f2;
     font-family: "dansestudietdisplay1";
     padding: 40px;
-    
-}
+    font-size: 32px;
+  }
 
-.første{
-    gap: 40px;
-    
-}
+  .genre-list {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+</style>
 
-
-
-</style> 
-
-
-<script> 
-</script> 
+<script></script>
