--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,7 @@ import DansePortraetter from "../components/DansePortraetter.astro";
 import Velkommen from "../components/Velkommen.astro";
 import Workshop from "../components/Workshop.astro";
 import Button from "../components/Button.astro";
+import Header from "../components/Header.astro";
 
 
 ---
@@ -20,6 +21,7 @@ import Button from "../components/Button.astro";
 		<title>Astro</title>
 	</head>
 	<body>
+		<Header/>
 		<Hero/>
 		<Velkommen/>
 		<Genre/>
