--- a/src/components/Genre.astro
+++ b/src/components/Genre.astro
@@ -31,8 +31,9 @@
   .grid3 {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    justify-content: center;
-    text-align: left;
+   
+    
+  text-align: left;
     list-style-type: none;
     background-color: #fff3f2;
     font-family: "dansestudietdisplay1";
@@ -44,7 +45,16 @@
     list-style: none;
     padding: 0;
     margin: 0;
+  
   }
+
+  li {
+    padding-top: 40px;
+  }
+
+
+
+  
 </style>
 
 <script></script>
