--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -13,14 +13,18 @@
     background-color: #fff3f2;
     justify-content: center;
     text-align: center;
+    padding-top: 20px;
+    padding-bottom: 130px;
+    
   }
 
   .button {
     background-color: #dbadb1;
     border-radius: 4px;
     color: #196472;
+    font-size: 30px;
     text-decoration: none;
-    padding: 10px;
+    padding: 20px;
     font-family: "dansestudietdisplay1";
     font-weight: bold;
   }
