--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,7 +25,7 @@ import Header from "../components/Header.astro";
 		<Hero/>
 		<Velkommen/>
 		<Genre/>
-		<Button/>
+		<!-- <Button/> -->
 
 			
 				
