--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,25 +1,80 @@
 
+<header id="grid_menu">
+    <div class="logo">
+     <img class="logo_img logo" src="/src/assets/logo_dansestudiet.png" alt="logo" />
+    </div>
 
+    <nav id="header-nav">
+      <ul id="menu">
+        <li class="Forestillinger">
+          <a href="#" class="subnavbtn">Forestillinger</a>
+        </li>
+        <li class="Priser og tilmelding">
+          <a href="#" class="subnavbtn">Priser og tilmelding</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
+
+<!-- 
 <div class="header">
     <h1>Header</h1>
-  </div>
+  </div> -->
 
 <style>
-.header {
-    background: #1abc9c;
-    color: white;
-    font-size: 10px;
-  }
 
-  h1{
-    margin-top: 0;
-    margin-bottom: 0;
-    text-align: start;
-  }
+    /* menu*/
+ul#menu li {
+  display: inline;
+  margin-left: 70px;
+}
 
-  p{
-    margin-top: 0;
-    margin-bottom: 0;
-    text-align: end;
-  }
+
+header {
+  position: sticky;
+  top: 0;
+  padding: 5px 25px;
+  padding-top: 10px;
+  display: flex;
+  justify-content: space-between;
+  /* align-items: baseline; */
+  z-index: +1;
+  background-color: #196472;
+}
+
+header nav ul {
+  margin: 0;
+  padding: 0;
+  padding-bottom: 5px;
+  overflow-x: auto;
+}
+
+a {
+  text-decoration: none;
+  font-weight: 700;
+  color: #FFF3F2;
+  font-size: 25px;
+  padding: 10px;
+  font-family: "dansestudietdisplay1";
+  font-weight: lighter;
+}
+
+a:hover {
+  color: #FFDF4D;
+}
+
+.logo {
+  width: 30%;
+}
+
+#grid_menu {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+  gap: 65px;
+}
+
+.icon {
+  width: 4%;
+}
 </style>
