--- a/src/components/Velkommen.astro
+++ b/src/components/Velkommen.astro
@@ -1,38 +1,39 @@
 ---
+
 ---
 
 <section class="grid1">
-    <div class= "overskrift">
-<h1> VELKOMMEN TIL DANSESTUDIET </h1>
-<h2> TILMELDING TIL EFTERÅRSSÆSON FOR 2023 ER STADIG ÅBEN </h2> 
-</div>
+  <div class="overskrift">
+    <h1>VELKOMMEN TIL DANSESTUDIET</h1>
+    <h2>TILMELDING TIL EFTERÅRSSÆSON FOR 2023 ER STADIG ÅBEN</h2>
+  </div>
 </section>
 
 <style>
-
-.grid1{
+  .grid1 {
     text-align: center;
-    justify-content:center;
+    justify-content: center;
     display: grid;
-    background-color:#FFF3F2;
+    background-color: #fff3f2;
     font-family: "dansestudietdisplay1";
-}
+  }
 
-h1{
+  h1 {
     font-weight: lighter;
     font-size: 64px;
-}
+  }
 
-h2{
-   
+  h2 {
     font-weight: lighter;
     font-size: 32px;
-}
+  }
 
-
-
+  @media (max-width: 820px) {
+    .grid1 {
+      display: grid;
+      grid-template-columns: 1fr;
+    }
+  }
 </style>
 
-<script> 
-</script>
-
+<script></script>
