--- a/src/components/Genre.astro
+++ b/src/components/Genre.astro
@@ -25,18 +25,18 @@ import Button from "../components/Button.astro";
     <li>Waacking</li>
     <li>Workshops m.m.</li>
   </ul>
-  <Button/>
 </section>
-
+<div>
+  <Button />
+</div>
 <style>
   .grid3 {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     padding-top: 0px;
     padding-left: 130px;
-   
-    
-  text-align: left;
+
+    text-align: left;
     list-style-type: none;
     background-color: #fff3f2;
     font-family: "dansestudietdisplay1";
@@ -54,9 +54,12 @@ import Button from "../components/Button.astro";
     padding-top: 40px;
   }
 
-
-
-  
+  @media (max-width: 820px) {
+    .grid3 {
+      display: grid;
+      grid-template-columns: 1fr;
+    }
+  }
 </style>
 
 <script></script>
