--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -4,7 +4,7 @@
 
 <!-- <section class="knap"> -->
 <div class="knap">
-  <a href="#" class="button">Se Skema Her</a>
+  <button>SE SKEMA HER</button>
 </div>
 <!-- </section> -->
 
@@ -13,18 +13,26 @@
     background-color: #fff3f2;
     justify-content: center;
     text-align: center;
-    padding-top: 100px;
+    padding-top: 40px;
     padding-bottom: 100px;
   }
 
-  .button {
-    background-color: #dbadb1;
+  button {
+    background-color: #196472;
     border-radius: 4px;
-    color: #196472;
-    font-size: 30px;
-    text-decoration: none;
-    padding: 20px;
+    border-color: #ffdf4c;
+    width: 100%;
+    color: #ffffff;
+    padding-top: 10px;
+    padding-bottom: 10px;
     font-family: "dansestudietdisplay1";
-    font-weight: bold;
+    font-weight: lighter;
+    font-size: 20px;
+    width: 30%;
+  }
+
+  button:hover {
+    background-color: #ffdf4c;
+    color: #196472;
   }
 </style>
