--- a/src/components/Lab.astro
+++ b/src/components/Lab.astro
@@ -1,59 +1,61 @@
 <div class="lab">
-    <img src="/src/assets/Forstilling.2.png" alt="billede2">
-    <h2>Movement LAB</h2>
-    <h3>Løndag & Søndag d. 3. & 4. februar 2024. Begge dage Kl.13-16</h3>
-    <p>Vittoria Lasorella er tilbage og vi glæder os til dette længe ventede Movement LAB med hende. Åben for tilmelding!</p>
-   <div class="knap"> <button>Se forestillinger her</button></div>
-   </div>
+  <img src="/src/assets/Forstilling2.png" alt="billede2" />
+  <h2>Movement LAB</h2>
+  <h3>Løndag & Søndag d. 3. & 4. februar 2024. Begge dage Kl.13-16</h3>
+  <p>
+    Vittoria Lasorella er tilbage og vi glæder os til dette længe ventede
+    Movement LAB med hende. Åben for tilmelding!
+  </p>
+  <div class="knap"><button>Se forestillinger her</button></div>
+</div>
 
-   <style>
+<style>
+  h2 {
+    font-family: "dansestudietdisplay1";
+    color: #fffcfb;
+    font-weight: lighter;
+  }
 
-h2 {
-        font-family: "dansestudietdisplay1" ;
-        color: #FFFCFB;
-        font-weight: lighter;
-        }
+  h3 {
+    font-family: "avenir next";
+    color: #fffcfb;
+    font-weight: lighter;
+    font-size: 18px;
+  }
 
-        h3 {
-            font-family: "avenir next" ;
-        color: #FFFCFB; 
-        font-weight: lighter;
-        font-size: 18px;
-        }
+  p {
+    font-family: "avenir next";
+    color: #fffcfb;
+    font-weight: lighter;
+    font-size: 15px;
+  }
+  img {
+    width: 99%;
+  }
 
-        p {
-            font-family: "avenir next" ;
-        color: #FFFCFB; 
-        font-weight: lighter;
-        font-size: 15px; 
-        }
-    img {
-        width: 99%;
-    }
+  .lab {
+    padding: 20px;
+  }
 
-    .lab {
-        padding: 20px;
-    }
+  button {
+    background-color: #196472;
+    border-radius: 4px;
+    border-color: #ffdf4c;
+    width: 100%;
+    color: #fffcfb;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    font-family: "dansestudietdisplay1";
+    font-weight: lighter;
+    font-size: 20px;
+  }
 
-    button {
-        background-color: #196472;
-        border-radius: 4px ;
-        border-color: #FFDF4C;
-        width: 100%;
-        color: #FFFCFB;
-        padding-top: 10px;
-        padding-bottom: 10px;
-        font-family: "dansestudietdisplay1" ;
-        font-weight: lighter;
-        font-size: 20px;
-    }
-    
-    button:hover {
-        background-color: #FFDF4C;
-        color: #196472;
-    }
+  button:hover {
+    background-color: #ffdf4c;
+    color: #196472;
+  }
 
-    .knap {
-        padding-top: 40px;
-    }
+  .knap {
+    padding-top: 40px;
+  }
 </style>
