--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -35,4 +35,15 @@
     background-color: #ffdf4c;
     color: #196472;
   }
+
+  @media (max-width: 820px) {
+    button {
+      display: grid;
+      grid-template-columns: 1fr;
+      justify-content: center;
+      width: 60%;
+      margin-left: auto;
+      margin-right: auto;
+    }
+  }
 </style>
