ændret i navnene med billeder samt video

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,7 +1,7 @@
 
 <header id="grid_menu">
     <div class="logo">
-     <img class="logo_img logo" src="/src/assets/logo1_dansestudiet.png" alt="logo" />
+     <img class="logo_img logo" src="../src/assets/logodansestudiet.png" alt="logo" />
     </div>
   </header>
 
