--- a/src/components/DansePortraetter.astro
+++ b/src/components/DansePortraetter.astro
@@ -3,12 +3,12 @@
 <h2>Danse portrætter</h2>
 
 <section class="grid">
-    <img class="img1"src="../src/assets/portrat.2.png" alt="potraet2">
-    <img class="img2"src="../src/assets/portrat.4.png" alt="potraet4">
-    <img class="img3" src="../src/assets/portrat.7.png" alt="potraet1">
-    <img class="img4"src="../src/assets/portrat.5.png" alt="potraet5">
-    <img class="img5"src="../src/assets/portrat.3.png" alt="potraet3">
-    <img class="img6"src="../src/assets/portrat.6.png" alt="potraet6">
+    <img class="img1"src="../public/assets/portrat.2.png" alt="potraet2">
+    <img class="img2"src="../public/assets/portrat.4.png" alt="potraet4">
+    <img class="img3" src="../public/assets/portrat.7.png" alt="potraet1">
+    <img class="img4"src="../public/assets/portrat.5.png" alt="potraet5">
+    <img class="img5"src="../public/assets/portrat.3.png" alt="potraet3">
+    <img class="img6"src="../public/assets/portrat.6.png" alt="potraet6">
 </section>
 
 </div>
