--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,6 +1,6 @@
 <footer>
     <div class="footer_background">
-        <img class="logo_footer logo" src="../src/assets/logo.png" alt="logo" />
+        <img class="logo_footer logo" src="../public/assets/logo.png" alt="logo" />
        </div>
 </footer>
 
