--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,6 +1,6 @@
 <div class="container">
 <video class="video" autoplay muted loop>
-    <source src="/public/video/film_til_header.mov">
+    <source src="./video/film_til_header.mov">
 </video>
 <div>
     <h1 class="overskrift">Dansestudiet</h1>
